Added RUM / web performance context using HTML5 Web Performance API (#248) (TODO)
Added ability to execute a custom callback once sp.js is loaded (#246)
Added internal site search event (#241) (TODO)
Improved document height detection (#236) (TODO)
Fixed SauceLabs red status (#235) (TODO)
Fixed CloudFront cache invalidation (#230) (TODO)
Renamed /dist to /deploy (#216)
Moved context querystring to end of JS-generated beacons (#204) (TODO)
Added pageUnloadGuard to wait until outbound queue is empty before unloading (#202) (TODO)
Added event_id generation (#190)
Added content field to link click events (#187) (TODO)
Removed dependency on fblundun fork of grunt-yui-compressor (#172) (TODO)
Replaced "Getting started" with Vagrant-using "Contributing quickstart" (#169) (TODO)
Added async-large.html (#162) (TODO)
Improved F rating for tracker.js in CodeClimate (#150)
Clarified scope of localStorage (#122) (TODO)
Added trackAddToCart and trackRemoveFromCart events (#97)
Added further Intern unit tests (#76) (TODO)
Added social tracking features (#12)
Improved efficiency of enableLinkClickTracking (#254)
Integrated the Tracker Core (#255)
Removed deprecated trackImpression method (#256)

Version 2.0.1 (2014-10-12)
--------------------------
Made error logging compatible with Internet Explorer (#264)
Fixed SauceLabs red status (#235)

Version 2.0.0 (2014-07-03)
--------------------------
Moved fixUpUrl into its own file, called lib/proxies.js (#112)
Fixed duplication of querystring parameter lookup (#111)
Added tests for helpers.js (#96)
Added tests for detectors.js (#95)
Replaced cookie.js with browser-cookie-lite (#88)
Added ad conversion tracking (#60)
Added ad click tracking (#59)
Added initial localStorage support for intermittent offline beacons, thanks @rcs! (#24)
Added new trackAdImpression, mapping to unstructured event (#13)
Removed references to referral cookie (#118)
Implemented enableLinkTracking support (#51)