@@ -10,7 +10,7 @@ Improved document height detection (#236) (TODO)
 Fixed SauceLabs red status (#235) (TODO)
 Fixed CloudFront cache invalidation (#230) (TODO)
 Renamed /dist to /deploy (#216)
-Moved context querystring to end of JS-generated beacons (#204) (TODO)
+Moved context querystring to end of JS-generated beacons (#204)
 Added pageUnloadGuard to wait until outbound queue is empty before unloading (#202) (TODO)
 Added event_id generation (#190)
 Added content field to link click events (#187) (TODO)
@@ -25,6 +25,7 @@ Added social tracking features (#12)
 Improved efficiency of enableLinkClickTracking (#254)
 Integrated the Tracker Core (#255)
 Removed deprecated trackImpression method (#256)
+Added forceSecureTracker boolean option to the argmap, thanks @kujo4pmZ! (#247) (TODO)
 
 Version 2.0.1 (2014-10-12)
 --------------------------
